Table cursoDisciplina {
  id int [pk]
  cursoId int [ref: > curso.id]
  disciplinaId int [ref: > disciplina.id]
}

Table disciplina {
  id integer [primary key]
  nome varchar
  carga_horaria integer
}

Table gradeHorario {
  id int [pk]
  descricao varchar
}

Table horario {
  id int [pk]
  inicio time
  fim time
  gradeHorarioId int [ref: > gradeHorario.id]
}

Table aula {
  id int [pk]
  disciplinaId int [ref: > cursoDisciplina.id]
  professorId int [ref: > professor.id]
  horarioId int [ref: > horario.id]
  diaSemana int [ref: > diaDaSemana.id]
}

Table disponibilidade {
  id int [pk]
  professorId int [ref: > professor.id]
  diaSemana int [ref: > diaDaSemana.id]
  horarioId int [ref: > horario.id]
}

Table professor {
  id integer [primary key]
  nome varchar
}

Table curso {
  id integer [primary key]
  nome varchar
  carga_horaria integer
}

Table diaDaSemana {
  id integer [pk]
  descricao varchar
}